fix(PostsWall): Extra gap between grid children

--- a/src/components/Profile/PostsWall/PostWall.module.css
+++ b/src/components/Profile/PostsWall/PostWall.module.css
@@ -1,4 +1,5 @@
 .postWall {
   display: grid;
   gap: var(--padding-primary);
+  height: fit-content;
 }
